Added background color change for desktops

--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,9 @@
   }
 }
 
-/* ----------- For screens 1200px wide and larger----------- */
+/* ----------- DESKTOPS: For screens 1200px wide and larger----------- */
 @media (min-width: 1200px) {
-
+  body {
+  background: forestgreen;
+  }
 }
